--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "axios": "^1.4.0",
     "bootstrap": "^4.6.0",
+    "jspdf": "^3.0.3",
     "moment": "^2.30.1",
     "ngx-spinner": "^12.0.0",
     "react-scripts": "^5.0.1",
