--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^4.6.0",
     "jspdf": "^3.0.3",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "ngx-spinner": "^12.0.0",
     "react-scripts": "^5.0.1",
@@ -47,6 +48,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@angular/localize": "^12.2.11",
     "@types/jasmine": "~3.8.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
